--- a/ukma-critic-frontend/package.json
+++ b/ukma-critic-frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "crypto-browserify": "^3.12.1",
     "dotenv": "^17.2.3",
     "material-ui-confirm": "^4.0.0",
