--- a/ukma-critic-frontend/package.json
+++ b/ukma-critic-frontend/package.json
@@ -21,6 +21,7 @@
     "path-browserify": "^1.0.1",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.2.0",
     "react-player": "^3.3.3",
     "react-router-dom": "^7.9.4",
