--- a/ukma-critic-frontend/package.json
+++ b/ukma-critic-frontend/package.json
@@ -17,6 +17,8 @@
     "bootstrap-icons": "^1.13.1",
     "crypto-browserify": "^3.12.1",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.545.0",
     "material-ui-confirm": "^4.0.0",
     "path-browserify": "^1.0.1",
     "react": "^19.2.0",
